# CardAction

./: CMakeLists.txt  CardAction.cpp  CardAction.ini  CardAction.rc  README.md  build.bat  resource.h
.github/workflows/: build.yml  codeql.yml
